Add controller, description and manifest
