# Samples/Asp.net Core - Support Microsoft/Asp.net Core - Support Microsoft/Model/MicrosoftSupport.cs
@@ -1,0 +1,30 @@
+﻿namespace Asp.net_Core___Support_Microsoft.Model
+{
+    public class MicrosoftSupport
+    {
+        /// <summary>
+        /// 
+        /// </summary>
+        public string Title { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        public string LinkEncoded { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        public string Link { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        public string Description { get; set; }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        public string AppliesTo { get; set; }
+    }
+}
